# STL-sorting-searching

./: CMakeLists.txt  README.md
include/algorithm/: algorithm.hpp  bsort.hpp  helpers.hpp  isort.hpp  qsort.hpp  slcsort.hpp
include/utilities/: util.hpp
src/: main.cpp
test/: qsort_comp_test.hpp
